syntax = "proto3";

package dashboard.index;

option go_package = "github.com/gatewayorg/blue-dashboard/api/protos/index;index";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";


service PublicIndex {
    rpc Index(indexReq) returns(IndexResp) {
        option (google.api.http) = {
            get: "/index"
        };
    }
}

message indexReq {
    uint64 start = 1[(validate.rules).uint64.gt = 0];
    uint64 end = 2[(validate.rules).uint64.gt = 0];
}

message SharedMem {
    uint64 max_size = 1;
    uint64 used_size = 2;
    uint64 used_node = 3;
    google.protobuf.Timestamp time = 4;
}

message Connections {
    uint64 accepted = 1;
    uint64 active = 2;
    uint64 handled = 3;
    uint64 reading = 4;
    uint64 requests = 5;
    uint64 waiting = 6;
    uint64 writing = 7;
    google.protobuf.Timestamp time = 8;
}

message RequestTotal {
    uint64 in_bytes = 1;
    uint64 out_bytes = 2;
    uint64 _1xx = 3;
    uint64 _2xx = 4;
    uint64 _3xx = 5;
    uint64 _4xx = 6;
    uint64 _5xx = 7;
}

message CacheTotal {
    int64 miss = 1;
    int64 bypass = 2;
    int64 expired = 3;
    int64 stale = 4;
    int64 updating = 5;
    int64 revalidated = 6;
    int64 hit = 7;
    int64 scarce = 8;
}

enum GatewayStatus {
    UnHealth = 0;
    Health = 1;
}

message GatewayInfo {
    string host_name = 1;
    string version = 2;
    string ip = 3;
    GatewayStatus status = 4;
    repeated SharedMem shared_memory = 5;
    repeated Connections connections = 6;
    RequestTotal request_total = 7;
    CacheTotal cache_total = 8;
}

message IndexResp {
    repeated GatewayInfo data = 1;
}

